# cirx-swap-clean

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_NOTES.md  DEBUG_NOTES.md  DEPLOYMENT.md  NEURAL_INDEX.json  PROJECT_INDEX.json  README.E2E.md  README.md  REFACTORING_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT.md  STARTUP_GUIDE.md  TODO.md  TODO_TOAST.md  UI_NEURAL_INDEX.json  appkit-nuxt-repomix.xml  appkit-web-examles-repomix.xml  build.sh  build_ui_embeddings.py  cloudflare-config-guide.md  docker-compose.e2e.yml  docker-compose.iroh.yml  find_redundant_components.py  foundry.toml  package-lock.json  package.json  reown-appkit-nuxt-repomix.xml  repomix-output.xml  search_ui_embeddings.py  start-dev.sh  test-phase2-consolidation.js  test-price-consolidation.js  test-quote-consolidation.js  wrangler.toml
.md/: CLAUDE-OPEN.md  Circular_CIRX_OTC_Purchase_Form.md  audit-2025-08-08-web3-security.md  wallet-debugging-record.md
.txt/: commit_message.txt  commit_message_debug.txt  commit_message_fix.txt  remappings.txt
backend/: .env  .env.base  .env.development  .env.development.example  .env.e2e  .env.example  .env.local  .env.production.example  .envrc  .htaccess  BLOCKCHAIN_INTEGRATION.md  Dockerfile.e2e  ENVIRONMENT_SETUP.md  IMPLEMENTATION_PLAN.md  LAUNCH_GUIDE.md  MONITORING.md  PROJECT_INDEX.json  README.md  TELEGRAM_SETUP.md  TODO.md  TRANSACTION_READINESS.md  architecture.md  (+18 more)
iroh-bridge/: Cargo.toml  Dockerfile  docker-compose.yml
iroh-bridge/config/: iroh.toml
iroh-bridge/src/: config.rs  error.rs  http_bridge.rs  iroh_client.rs  main.rs  service_registry.rs
(+365 files in other folders)
