[package]
name = "iroh-bridge"
version = "0.1.0"
edition = "2021"
description = "IROH networking bridge for CIRX swap platform"
authors = ["CIRX Development Team"]

[dependencies]
# IROH networking
iroh = "0.28"
iroh-gossip = "0.28"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP server for bridge API
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"
dashmap = "5.0"

# HTTP client for backend communication
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "iroh-bridge"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"